W3c fixes, accessibility changes, Lighthouse checks
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -62,11 +62,13 @@
         }
         a {
             width: 100%;
+            font-size: 18px;
             @media (min-width: $min-desktop) {
                 width: max-content;
                 margin: 0;
                 margin-left: 40px;
             }
+
         }
     }
 
