Adding front matter way to hide page title, Adding way to add custom head overwrite
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,4 +14,5 @@
     {{- partial "head/favicons.html" . }}
     {{- template "_internal/google_analytics.html" . -}}
     {{- partial "head/custom-css.html" . }}
+    {{- partial "head/custom-head.html" . }}
 </head>
