--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,9 +6,11 @@
         {{- partial "header.html" . -}}
         
         <section id="content" class="container wrap">
-            <header>
-                <h1>{{ .Title }}</h1>
-            </header>
+            {{ if not .Params.hideHeader }}
+                <header>
+                    <h1>{{ .Title }}</h1>
+                </header>
+            {{ end }}
             {{ if or (eq .Kind "section") (eq .Kind "home") }}
             <div class="content">
             {{ else }}
