Reverse logic of hideHeader to be showHeader
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
         {{- partial "header.html" . -}}
         
         <section id="content" class="container wrap">
-            {{ if not .Params.hideHeader }}
+            {{ if not .Params.showHeader }}
                 <header>
                     <h1>{{ .Title }}</h1>
                 </header>
