--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ .Language.Lang }}">
     {{- partial "head.html" . -}}
-    <body class="{{ urlize .Type }}">
+    <body class="{{ urlize .Type }} page-{{ .Kind }}">
         {{- partial "accessibility.html" . -}}
         {{- partial "header.html" . -}}
         
