--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -11,6 +11,15 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+.title {
+    margin-block-start: 70px;
+    margin-block-end: 50px;
+    @media (min-width: $desktop-width) {
+        margin-block-start: 100px;
+        margin-block-end: 80px;
+    }
+}
+
 h1,
 h2,
 h4,
@@ -108,5 +117,77 @@ li {
     margin-bottom: 10px;
     &:last-child {
         margin-bottom: 0;
+    }
+}
+
+blockquote {
+    border-left: 4px solid var(--primary-400);
+    font-size: 16px;
+    padding-block-start: 4px;
+    padding-block-end: 4px;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-left: 20px;
+    @media (min-width: $min-desktop) {
+        font-size: 18px;
+        margin-inline-start: 20px;
+        margin-inline-end: 20px;
+        padding-left: 20px;
+    }
+    p {
+        font-style: italic;
+        margin-block-start: 10px;
+        margin-block-end: 10px;
+    }
+}
+
+.highlight pre {
+    padding: 20px;
+}
+
+table {
+    width: 100%;
+    // border: 0;
+    border-collapse: separate;
+    border-spacing: 0;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    border: 1px #cccccc solid;
+    th {
+        background-color: #e9e9e9;
+        font-weight: 700;
+    }
+    th:first-child,
+    td:first-child {
+        border-top-left-radius: 12px;
+    }
+    td,
+    th {
+        padding: 21px 35px;
+        text-align: left;
+        overflow: hidden;
+    }
+    th:last-child,
+    td:last-child {
+        border-top-right-radius: 12px;
+    }
+    tr td {
+        border-bottom: 1px #cccccc solid;
+    }
+    td,
+    th {
+        &:not(:last-child) {
+            border-right: 1px #cccccc solid;
+        }
+    }
+}
+
+.table-container {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: auto;
+    thead th:first-child,
+    tbody td:first-child {
+        min-width: 160px;
     }
 }
