--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    // space from content.
+    // Space from content.
     margin-top: 70px;
     @media (min-width: $min-desktop) {
         margin-top: 100px;
