--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -23,8 +23,8 @@ body {
 	padding-right: 12px;
 
 	@media (min-width: 372px) {
-		padding-left: 25px;
-		padding-right: 25px;
+		padding-left: var(--gutter);
+		padding-right: var(--gutter);
 	}
 
 	@media (min-width: $desktop-width) {
