--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,38 +1,36 @@
 // Define CSS variables
 :root {
-    --condensed-font-family: 'Oswald', 'Impact', 'Arial Black', sans-serif, -apple-system, BlinkMacSystemFont, Roboto,
+  --condensed-font-family: "Oswald", "Impact", "Arial Black", sans-serif, -apple-system, BlinkMacSystemFont, Roboto,
     Ubuntu;
-    --rounded-font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, Roboto,
-	Ubuntu, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --rounded-font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, Roboto,
+    Ubuntu, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
+  --text-color: var(--black);
+  --black: #000000;
+  --white: #ffffff;
+  --link-color: var(--primary-600);
+  --menu-link-color: var(--black);
+  --menu-link-color-hover: var(--gray-800);
+  --footer-link-color: var(--white);
+  --footer-link-color-hover: var(--primary-400);
+  --gutter: 25px;
+  --container-width: 1200px;
+  --content-width: 895px;
 
-    --text-color: var(--black);
-    --black: #000000;
-    --white: #FFFFFF;
-    --link-color: var(--primary-600);
-    --menu-link-color: var(--black);
-    --menu-link-color-hover: var(--gray-800);
-    --footer-link-color: var(--white);
-    --footer-link-color-hover: var(--primary-400);
-    --gutter: 25px; // TODO is this used?
-    --container-width: 1200px;
-    --content-width: 895px;
+  --primary-400: #5aa100;
+  --primary-600: #03856f;
+  --primary-700: #016554;
+  --primary-800: #003c32;
 
-    --primary-400: #5AA100;
-    --primary-600: #03856F;
-    --primary-700: #016554;
-    --primary-800: #003C32;
-    
-    --gray-200: #EAECF0;
-    --gray-300: #E5E5E5;
-    --gray-400: #E4E4E4;
-    --gray-600: #B1B1B1;
-    --gray-700: #767676;
-    --gray-800: #5F6367;
-  }
+  --gray-200: #eaecf0;
+  --gray-300: #e5e5e5;
+  --gray-400: #e4e4e4;
+  --gray-600: #b1b1b1;
+  --gray-700: #767676;
+  --gray-800: #5f6367;
+}
 
 // Define SCSS variables.
-$desktop-width: calc( 1200px + 25px + 25px);
+$desktop-width: calc(1200px + 25px + 25px);
 $min-desktop: 1000px;
 $mobile-max: 999px;
-
