Updating H4 letter spacing, allowing iFrames to go full width in content
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -3,7 +3,9 @@
         max-width: var(--content-width);
     }
 
-    .full-width, div {
+    .full-width,
+    div,
+    iframe {
         width: 100%;
         max-width: 100%;
     }
