--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -16,12 +16,10 @@
 @import "faq";
 @import "content";
 @import "accordion";
-
+@import "blog";
 
 @import "shortcodes/toc";
 @import "shortcodes/youtube-enhanced";
-
-
 
 // @import "colors";
 // @import "typography";
@@ -30,5 +28,3 @@
 // footer
 // layouts
 // partials
-
-
