--- a/assets/scss/_accordion.scss
+++ b/assets/scss/_accordion.scss
@@ -19,6 +19,7 @@
         > h2 {
             margin-block-start: 0;
             margin-block-end: 0;
+
             line-height: 26px;
             font-size: 20px;
             @media (min-width: $min-desktop) {
@@ -32,9 +33,11 @@
             font-weight: 700;
             padding-top: 34px;
             padding-bottom: 34px;
+            margin-inline-end: 34px;
             @media (min-width: $min-desktop) {
                 padding-top: 40px;
                 padding-bottom: 40px;
+                margin-inline-end: 40px;
             }
         }
     }
