--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -117,6 +117,8 @@ li {
 }
 
 blockquote {
+    margin-block-start: 30px;
+    margin-block-end: 30px;
     border-left: 4px solid var(--primary-400);
     font-size: 16px;
     padding-block-start: 4px;
@@ -124,6 +126,10 @@ blockquote {
     margin-inline-start: 0;
     margin-inline-end: 0;
     padding-left: 20px;
+    @media (min-width: $desktop-width) {
+        margin-block-start: 50px;
+        margin-block-end: 50px;
+    }
     @media (min-width: $min-desktop) {
         font-size: 18px;
         margin-inline-start: 20px;
