Adding image shortcode, explaining shortcodes
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/assets/scss/_language-selector.scss
+++ b/assets/scss/_language-selector.scss
@@ -31,9 +31,10 @@
             right: 0;
             @media (min-width: $min-desktop) {
                 padding-top: 30px;
+                width: 100px;
             }
         }
-        
+
         .dropdown-arrow {
             &::after {
                 // opening menu.
