--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -39,8 +39,8 @@
             flex-shrink: 0;
             flex-grow: 1;
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(125px, 230px));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(125px, 200px));
+            gap: 15px;
             a {
                 font-size: 10px;
                 text-decoration: none;
@@ -66,6 +66,9 @@
             @media (min-width: $min-desktop) {
                 width: max-content;
                 margin: 0;
+                margin-left: 20px;
+            }
+            @media (min-width: $desktop-width) {
                 margin-left: 40px;
             }
         }
