--- a/assets/scss/_images.scss
+++ b/assets/scss/_images.scss
@@ -1,7 +1,20 @@
 // Responsive Images by default.
-
 img {
 	margin: 0;
 	max-width: 100%;
 	height: auto;
+}
+
+figure {
+	margin-block-start: 0;
+	margin-block-end: 0;
+	margin-inline-start: 0;
+	margin-inline-end: 0;
+}
+
+figcaption {
+	font-style: italic;
+	font-size: 14px;
+	font-weight: 500;
+	color: var(--gray-800);
 }
