Remove unused fonts, experiment preloading body font

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,6 +7,7 @@
     {{- partial "head/csp.html" . }}
     <title>{{ $title }}</title>
     <meta name="description" content="{{ $description }}" />
+    <link rel="preload" href="/fonts/nunito-v25-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     {{- partial "head/css.html" . }}
     {{- template "_internal/opengraph.html" . -}}
     {{- template "_internal/twitter_cards.html" . -}}
