--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -10,6 +10,10 @@
         max-width: 100%;
     }
 
+    img {
+        max-width: 100%;
+    }
+
     // Code block restriction.
     div.highlight {
         max-width: var(--content-width);
