--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -27,7 +27,7 @@ h1,
     color: var(--primary-400);
     text-transform: uppercase;
     line-height: 112.2%;
-    font-size: 42px;
+    font-size: 44px;
     @media (min-width: $min-desktop) {
         line-height: 115%;
         font-size: 80px;
@@ -42,6 +42,8 @@ h2,
     text-transform: uppercase;
     line-height: 120%;
     font-size: 34px;
+    margin-block-start: 50px;
+    margin-block-end: 30px;
     @media (min-width: $min-desktop) {
         line-height: 115%;
         font-size: 40px;
@@ -54,6 +56,8 @@ h3,
     font-size: 20px;
     line-height: 150%;
     text-transform: none;
+    margin-block-start: 40px;
+    margin-block-end: 25px;
     @media (min-width: $min-desktop) {
         font-size: 30px;
     }
@@ -145,50 +149,4 @@ blockquote {
 
 .highlight pre {
     padding: 20px;
-}
-
-table {
-    width: 100%;
-    border-collapse: separate;
-    border-spacing: 0;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-    border: 1px #cccccc solid;
-    th {
-        background-color: #e9e9e9;
-        font-weight: 700;
-    }
-    th:first-child,
-    td:first-child {
-        border-top-left-radius: 12px;
-    }
-    td,
-    th {
-        padding: 21px 35px;
-        text-align: left;
-        overflow: hidden;
-    }
-    th:last-child,
-    td:last-child {
-        border-top-right-radius: 12px;
-    }
-    tr td {
-        border-bottom: 1px #cccccc solid;
-    }
-    td,
-    th {
-        &:not(:last-child) {
-            border-right: 1px #cccccc solid;
-        }
-    }
-}
-
-.table-container {
-    width: 100%;
-    max-width: 100%;
-    overflow-x: auto;
-    thead th:first-child,
-    tbody td:first-child {
-        min-width: 160px;
-    }
 }
