--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -17,14 +17,6 @@
 @import "content";
 @import "accordion";
 @import "blog";
-
+@import "tables";
 @import "shortcodes/toc";
 @import "shortcodes/youtube-enhanced";
-
-// @import "colors";
-// @import "typography";
-// @import "forms";
-// header
-// footer
-// layouts
-// partials
