--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,10 @@
         <section id="content" class="container wrap">
             {{ if ne .Params.showHeader false }}
                 <header>
+                    {{ if and (eq .Section "blog") (eq .Kind "page") }}
+                    <!-- Insert your text here -->
+                    <p>Your text that appears above the blog single title.</p>
+                    {{ end }}
                     <h1 class="title">{{ .Title }}</h1>
                 </header>
             {{ end }}
