Updating blog with breadcrumb, revising blog index styling
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,8 +9,7 @@
             {{ if ne .Params.showHeader false }}
                 <header>
                     {{ if and (eq .Section "blog") (eq .Kind "page") }}
-                    <!-- Insert your text here -->
-                    <p>Your text that appears above the blog single title.</p>
+                    {{- partial "blog/breadcrumb.html" . -}}
                     {{ end }}
                     <h1 class="title">{{ .Title }}</h1>
                 </header>
