--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -15,8 +15,8 @@
         }
     }
     &__byline {
-        margin-block-start: 5px;
-        margin-block-end: 10px;
+        margin-block-start: 15px;
+        margin-block-end: 12px;
         p {
             margin-block-start: 0;
             margin-block-end: 0;
@@ -49,13 +49,44 @@
     }
 }
 
+// Singular blog page.
 .blog.page-page {
     .blog-item__byline {
         margin-block-end: 50px;
     }
+    .title {
+        margin-block-start: 30px;
+        margin-block-end: 50px;
+        @media (min-width: $desktop-width) {
+            margin-block-start: 60px;
+            margin-block-end: 80px;
+        }
+    }
 }
 
 .blog {
+    &__breadcrumb {
+        margin-block-start: 70px;
+        margin-block-end: 0;
+        @media (min-width: $desktop-width) {
+            margin-block-start: 100px;
+            margin-block-end: 0;
+        }
+        font-family: Nunito;
+        font-size: 12px;
+        @media (min-width: 600px) {
+            font-size: 14px;
+        }
+        font-style: normal;
+        font-weight: 700;
+        line-height: 150%;
+        letter-spacing: 2.1px;
+        text-transform: uppercase;
+        a {
+            text-decoration: none;
+            color: var(--gray-800);
+        }
+    }
     &__back {
         margin-top: 50px;
     }
