Adding nowrap to footer github and accessibility
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -71,7 +71,7 @@
 
             <div class="copyright__accessibility-git-wrapper">
                 {{ if .Site.Params.accessibility.help_url }}
-                <a href="{{ .Site.Params.accessibility.help_url }}">{{ .Site.Params.accessibility.help_text | default
+                <a href="{{ .Site.Params.accessibility.help_url }}" class="nowrap">{{ .Site.Params.accessibility.help_text | default
                     "Accessibility Statement" }}</a>
                 {{ end }}
 
