--- a/layouts/partials/footer/github.html
+++ b/layouts/partials/footer/github.html
@@ -5,7 +5,7 @@
 {{ $langPrefix := $.Site.LanguageCode }}
 {{ $editURL := printf "%s/content/%s/%s" $.Site.Params.github.repo_url $langPrefix $pageRelPath }}
 
-<a target="_blank" rel="noopener noreferrer" href="{{ $editURL }}">
+<a target="_blank" rel="noopener noreferrer" href="{{ $editURL }}" class="nowrap">
     {{ $.Site.Params.github_edit | default "Edit this page on GitHub" }}
 </a>
 
