--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -17,6 +17,7 @@
 @import "content";
 @import "accordion";
 @import "blog";
+@import "breadcrumb";
 @import "tables";
 @import "shortcodes/toc";
 @import "shortcodes/youtube-enhanced";
