--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,8 +8,8 @@
         <section id="content" class="container wrap">
             {{ if ne .Params.showHeader false }}
                 <header>
-                    {{ if and (eq .Section "blog") (eq .Kind "page") }}
-                    {{- partial "blog/breadcrumb.html" . -}}
+                    {{ if and (eq .Kind "page") (ne .Section "") }}
+                    {{- partial "breadcrumb.html" . -}}
                     {{ end }}
                     <h1 class="title">{{ .Title }}</h1>
                 </header>
