Humanising breadcrumb text
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -1,2 +1,1 @@
-
-<p class="breadcrumb"><a href="/{{ .Section }}/">{{ .Section }}</a></p>
+<p class="breadcrumb"><a href="/{{ .Section }}/">{{ .Section | humanize }}</a></p>
