--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -34,6 +34,8 @@
     }
 
     .logo {
+        object-position: 0 0;
+        object-fit: contain;
         max-width: 100px;
         max-height: 36px;
         @media (min-width: $min-desktop) {
