--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -27,4 +27,40 @@
         word-break: break-word;
         hyphens: auto;
     }
+
+    .box-grid {
+        gap: 30px;
+        margin-top: 40px;
+        margin-bottom: 100px;
+        .shadow-box {
+            grid-column: span 12;
+            @media (min-width: 600px) {
+                grid-column: span 6;
+            }
+            @media (min-width: $desktop-width) {
+                grid-column: span 4;
+            }
+            padding: 40px 24px;
+            border-radius: 10px;
+            background: var(--white);
+            box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
+            h2 {
+                margin-block-start: 0;
+                margin-block-end: 30px;
+                a {
+                    text-decoration: none;
+                }
+            }
+        }
+        img {
+            margin-bottom: 20px;
+        }
+    }
+    
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        column-gap: 3%;
+        row-gap: 50px;
+    }    
 }
