#7 Adding space between copyright and links on mobile
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -125,6 +125,7 @@
         }
         &__accessibility-git-wrapper {
             @media (max-width: $mobile-max) {
+                margin-top: 20px;
                 a {
                     margin-right: 10px;
                     & + a {
