--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -42,14 +42,13 @@
             grid-template-columns: repeat(auto-fit, minmax(125px, 200px));
             gap: 15px;
             a {
-                font-size: 11px;
+                font-size: 13px;
+                font-weight: 400;
                 text-decoration: none;
-                letter-spacing: 0.2px;
             }
             .top-menu-item {
-                font-size: 12px;
+                font-size: 15px;
                 font-weight: 800;
-                letter-spacing: 0.6px;
                 margin-top: 0;
                 margin-bottom: 20px;
             }
@@ -111,7 +110,7 @@
     }
 
     .copyright {
-        font-size: 10px;
+        font-size: 11px;
         line-height: 150%;
         letter-spacing: 0.2px;
         @media (min-width: $min-desktop) {
