Added an intermediate color for hover of secondary and teriary buttons (#16)
Signed-off-by: Chris Abraham <cjyabraham@gmail.com>

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -18,6 +18,7 @@
   --content-width: 895px;
 
   --primary-400: #5aa100;
+  --primary-500: #4d8307;
   --primary-600: #03856f;
   --primary-700: #016554;
   --primary-800: #003c32;
