Adds pagination to the blog (#5)
Signed-off-by: Chris Abraham <cjyabraham@gmail.com>

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -16,6 +16,7 @@
 @import "content";
 @import "accordion";
 @import "blog";
+@import "pagination";
 @import "breadcrumb";
 @import "tables";
 @import "shortcodes/card";
