--- a/assets/scss/_pagination.scss
+++ b/assets/scss/_pagination.scss
@@ -11,6 +11,9 @@
     position: relative;
     display: block;
     padding: .75rem 1rem;
+    @media (max-width: 420px) {
+        padding: .75rem .75rem;
+    }
     margin-left: -1px;
     line-height: 1.25;
     background-color: #fff;
