Updating pagination non-active style, right aligning text in footer on desktop
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -140,6 +140,7 @@
                 flex-direction: column;
                 gap: 10px;
                 margin-left: 80px;
+                text-align: right;
             }
         }
         p {
