--- a/assets/scss/_pagination.scss
+++ b/assets/scss/_pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
     display: flex;
     list-style: none;
-    border-radius: .25rem;
+    border-radius: 0.25rem;
     margin: 20px 0;
     padding: 0;
     justify-content: center;
@@ -10,9 +10,9 @@
 .page-link {
     position: relative;
     display: block;
-    padding: .75rem 1rem;
+    padding: 0.75rem 1rem;
     @media (max-width: 420px) {
-        padding: .75rem .75rem;
+        padding: 0.75rem 0.75rem;
     }
     margin-left: -1px;
     line-height: 1.25;
@@ -32,6 +32,6 @@
 
 .page-item.active .page-link {
     z-index: 1;
-    color: var(--white);
-    background-color: var(--primary-800);
+    color: var(--black);
+    border: 1px solid var(--black);
 }
