--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,7 +10,7 @@
 @import "language-selector";
 @import "footer";
 @import "buttons";
-@import "embeds";
+@import "iframe";
 @import "images";
 @import "horizontal-rule";
 @import "content";
