--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -177,6 +177,16 @@
         }
     }
 
+    // Search.
+    .main-menu-search svg {
+        @media (min-width: $min-desktop) {
+            margin-left: 30px;
+        }
+        @media (max-width: $mobile-max) {
+            margin-top: 30px;
+        }
+    }
+
     // Top row only.
     .top-menu-item {
         @media (min-width: $min-desktop) {
