--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -45,6 +45,10 @@
                 {{ end }}
 
                 {{ partial "language-selector.html" $ }}
+
+                <a href="{{ "/search" | absLangURL }}" class="main-menu-search">
+                    <svg fill="none" viewBox="0 0 29 27" width="29" height="27" xmlns="http://www.w3.org/2000/svg"><path d="M11.172 20.035c5.042 0 9.13-4.036 9.13-9.015s-4.088-9.015-9.13-9.015-9.129 4.036-9.129 9.015c0 4.98 4.087 9.015 9.13 9.015zm5.974-4.615L26.849 25" opacity=".893" stroke="#000" stroke-width="4"></path></svg>
+                </a>
             </div>
 
         </nav>
