don't follow or index when not on production
Signed-off-by: Chris Abraham <cjyabraham@gmail.com>
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,8 +8,8 @@
     <title>{{ $title }}</title>
     <meta name="description" content="{{ $description }}" />
 
-    {{ if .Params.noindex }}
-    <meta name="robots" content="noindex" />
+    {{ if or .Params.noindex (not hugo.IsProduction) }}
+    <meta name="robots" content="noindex, nofollow" />
     {{ end }}
 
     {{- partial "head/preload.html" . }}
