check if env is production
Signed-off-by: Chris Abraham <cjyabraham@gmail.com>
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,6 +11,7 @@
     {{ if or .Params.noindex (not hugo.IsProduction) }}
     <meta name="robots" content="noindex, nofollow" />
     {{ end }}
+    {{hugo.IsProduction}}
 
     {{- partial "head/preload.html" . }}
     {{- partial "head/css.html" . }}
