--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,7 +11,7 @@
     {{ if or .Params.noindex (not hugo.IsProduction) }}
     <meta name="robots" content="noindex, nofollow" />
     {{ end }}
-    {{hugo.IsProduction}}
+    {{hugo.Environment}}
 
     {{- partial "head/preload.html" . }}
     {{- partial "head/css.html" . }}
