revert a few commits
Signed-off-by: Chris Abraham <cjyabraham@gmail.com>
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,10 +8,9 @@
     <title>{{ $title }}</title>
     <meta name="description" content="{{ $description }}" />
 
-    {{ if or .Params.noindex (not hugo.IsProduction) }}
+    {{ if .Params.noindex }}
     <meta name="robots" content="noindex, nofollow" />
     {{ end }}
-    {{hugo.Environment}}
 
     {{- partial "head/preload.html" . }}
     {{- partial "head/css.html" . }}
