makes cursor default for menu items with children
Signed-off-by: Chris Abraham <cjyabraham@gmail.com>
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -235,6 +235,7 @@
             }
         }
         > a {
+            cursor: default;
             &::after {
                 display: inline-block;
                 content: "";
