--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -225,7 +225,9 @@
             }
         }
         > a {
-            cursor: default;
+            @media (min-width: $min-desktop) {
+                cursor: default;
+            }
             &::after {
                 display: inline-block;
                 content: "";
