only change cursor hover on desktop widths
Signed-off-by: Chris Abraham <cjyabraham@gmail.com>
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -235,7 +235,9 @@
             }
         }
         > a {
-            cursor: default;
+            @media (min-width: $min-desktop) {
+                cursor: default;
+            }
             &::after {
                 display: inline-block;
                 content: "";
