Updating cursor to be applied if device supports hover
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -225,7 +225,7 @@
             }
         }
         > a {
-            @media (min-width: $min-desktop) {
+            @media (hover: hover) {
                 cursor: default;
             }
             &::after {
