--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -235,7 +235,7 @@
             }
         }
         > a {
-            @media (min-width: $min-desktop) {
+            @media (hover: hover) {
                 cursor: default;
             }
             &::after {
