--- a/assets/scss/_language-selector.scss
+++ b/assets/scss/_language-selector.scss
@@ -18,7 +18,6 @@
         margin-top: 0;
     }
     &.is-expanded {
-        margin-bottom: 100px;
         @media (min-width: $min-desktop) {
             margin-bottom: 0;
             overflow: visible;
@@ -64,6 +63,13 @@
     padding-right: 20px; // min space for word and chevron.
     @media (min-width: $min-desktop) {
         padding-right: 10px; // as per other menu items.
+    }
+    transition: color 0.5s ease;
+    @media (prefers-reduced-motion: reduce) {
+        transition: none;
+    }
+    &:hover {
+        color: var(--menu-link-color-hover);
     }
 }
 
