--- a/layouts/shortcodes/search_form.html
+++ b/layouts/shortcodes/search_form.html
@@ -1,5 +1,6 @@
-<link href='{{ pagefind/pagefind-ui.css" | absURL }}' rel="stylesheet" />
+<link href='{{ "pagefind/pagefind-ui.css" | absURL }}' rel="stylesheet">
 <script src='{{ "pagefind/pagefind-ui.js" | absURL }}' defer></script>
+
 <div id="search"></div>
 <script>
   window.addEventListener("DOMContentLoaded", (event) => {
