#47 Adds spacing to anchor links when sticky header is true
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,4 +21,5 @@
     {{- template "_internal/google_analytics.html" . -}}
     {{- partial "head/custom-css.html" . }}
     {{- partial "head/custom-head.html" . }}
+    {{- partial "head/sticky-header.html" . }}
 </head>
