#47 Adds spacing to FAQ accordion when sticky header is true
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -89,6 +89,9 @@
 {{ if and (eq .Type "faq") (eq .Kind "section") }}
 {{ $js := resources.Get "js/accordion.js" }}
 <script defer src="{{ $js.Permalink }}"></script>
+<script>
+    var stickyHeader = {{ if .Site.Params.sticky_header }}true{{ else }}false{{ end }};
+  </script>
 {{ end }}
 
 {{/* Theme: Scripts */}}
