--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -126,7 +126,7 @@
             display: block;
             color: var(--menu-link-color);
             text-decoration: none;
-            font-family: Nunito;
+            font-family: var(--rounded-font-family);
             font-size: 16px;
             font-style: normal;
             font-weight: 700;
