--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -21,7 +21,7 @@
             margin-block-start: 0;
             margin-block-end: 0;
             color: #000;
-            font-family: Nunito;
+            font-family: var(--rounded-font-family);
             font-size: 14px;
             @media (min-width: 600px) {
                 font-size: 16px;
