#44 Making twitter card more easily removable
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,7 +15,7 @@
     {{- partial "head/preload.html" . }}
     {{- partial "head/css.html" . }}
     {{- template "_internal/opengraph.html" . -}}
-    {{- template "_internal/twitter_cards.html" . -}}
+    {{- partial "head/twitter-cards.html" . }}
     {{- partial "head/published-time.html" . }}
     {{- partial "head/favicons.html" . }}
     {{- template "_internal/google_analytics.html" . -}}
