--- a/layouts/partials/head/sticky-header.html
+++ b/layouts/partials/head/sticky-header.html
@@ -1,6 +1,6 @@
 {{ if .Site.Params.sticky_header }}
 <style>
-  @media not (min-width: 515px) and (max-height: 615px) {
+  @media not screen and (min-width: 515px) and (max-height: 615px) {
     :target {
       scroll-margin-top: 80px;
     }
